--- a/index.html
+++ b/index.html
@@ -1,72 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header id="showcase">
+        <nav>
+          <img src="./images/logo.svg" alt="Sunnyside Logo" class="logo" />
+          <ul id="nav-links">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><button>Contact</button></li>
+          </ul>
+        </nav>
+        <h1 id="tagline">We are creatives</h1>
+        <div id="scroll-arrow">
+          <img src="./images/icon-arrow-down.svg" alt="" />
+        </div>
+      </header>
 
-  About
-  Services
-  Projects
-  Contact
+      <section id="transform">
+        <div class="content">
+          <h1 class="about-header">Transform your brand</h1>
+          <p class="info">
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a class="info-link" href="#">Learn More</a>
+          <hr id="transform-line" />
+        </div>
+        <img
+          id="transform-img"
+          src="./images/desktop/image-transform.jpg"
+          alt="egg"
+        />
+      </section>
 
-  We are creatives
+      <section id="stand-out">
+        <img
+          id="stand-out-img"
+          src="./images/desktop/image-stand-out.jpg"
+          alt="egg"
+        />
+        <div class="content">
+          <h1 class="about-header">Stand out to the right audience</h1>
+          <p class="info">
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <a class="info-link" href="#">Learn More</a>
+          <hr id="stand-out-line" />
+        </div>
+      </section>
 
-  Transform your brand
+      <section id="services">
+        <div id="graphic-design" class="service">
+          <h1 class="service-header">Graphic Design</h1>
+          <p class="service-info">
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+        <div id="photography" class="service">
+          <h1 class="service-header">Photography</h1>
+          <p class="service-info">
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
+      </section>
 
-  Learn more
+      <section id="testimonials">
+        <h1 id="testimonial-title">Client Testimonials</h1>
+        <div class="client-testimonials">
+          <div class="testimonial">
+            <img
+              src="./images/image-emily.jpg"
+              alt="Emily"
+              class="client-img"
+            />
+            <p class="testimonial-text">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <h3 class="client-name">Emily R.</h3>
+            <p class="client-position">Marketing Director</p>
+          </div>
 
-  Stand out to the right audience
+          <div class="testimonial">
+            <img
+              src="./images/image-thomas.jpg"
+              alt="Emily"
+              class="client-img"
+            />
+            <p class="testimonial-text">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <h3 class="client-name">Thomas S.</h3>
+            <p class="client-position">Chief Operating Officer</p>
+          </div>
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+          <div class="testimonial">
+            <img
+              src="./images/image-jennie.jpg"
+              alt="Emily"
+              class="client-img"
+            />
+            <p class="testimonial-text">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <h3 class="client-name">Jennie F.</h3>
+            <p class="client-position">Business Owner</p>
+          </div>
+        </div>
+      </section>
 
-  Learn more
+      <section class="gallery">
+        <div class="gallery-images">
+          <img
+            class="gallery-img"
+            src="./images/desktop/image-gallery-milkbottles.jpg"
+            alt=""
+          />
+          <img
+            class="gallery-img"
+            src="./images/desktop/image-gallery-orange.jpg"
+            alt=""
+          />
+          <img
+            class="gallery-img"
+            src="./images/desktop/image-gallery-cone.jpg"
+            alt=""
+          />
+          <img
+            class="gallery-img"
+            src="./images/desktop/image-gallery-sugarcubes.jpg"
+            alt=""
+          />
+        </div>
+      </section>
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <footer>
+        <img id="footer-logo" src="./images/logo.svg" alt="" />
+        <ul class="links">
+          <li>About</li>
+          <li>Services</li>
+          <li>Projects</li>
+        </ul>
+        <div class="socials">
+          <img src="images/icon-facebook.svg" alt="" class="social" />
+          <img src="images/icon-instagram.svg" alt="" class="social" />
+          <img src="images/icon-twitter.svg" alt="" class="social" />
+          <img src="images/icon-pinterest.svg" alt="" class="social" />
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
